[package]
name = "tart"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
ansi_term = "0.12.1"
toml = "0.8.20"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.30", features = ["derive"] }
schemars = "0.8.21"
serde_json = "1.0.138"
jsonschema = "0.29.0"
